Fix body scrollbars

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -76,10 +76,7 @@ body {
 
 body {
     @include scrollbar;
-
-    &:hover {
-        @include scrollbar-hover;
-    }
+    @include scrollbar-hover;
 }
 
 @import "ui/links";
